--- a/03.01-206-colors-starter/css/main.css
+++ b/03.01-206-colors-starter/css/main.css
@@ -73,10 +73,15 @@ footer {
 
   #column-3 {
     background-color: #CD5C5C;
+    width: 100%;
   }
 
   footer {
-    background-color: #F08080 ;
+    background-color: #F08080;
+  }
+
+  .col-3 {
+    width: 50%;
   }
   
 }
@@ -98,10 +103,14 @@ footer {
 
   #column-3 {
     background-color: #008B8B ;
+    width: 33.3%;
   }
 
   footer {
     background-color: #00008B;
+  }
+   .col-3 {
+    width: 33.3%;
   }
    
 }
