--- a/03.01-206-colors-starter/css/main.css
+++ b/03.01-206-colors-starter/css/main.css
@@ -107,7 +107,7 @@ footer {
   }
 
   footer {
-    background-color: cornflowerblue;
+    background-color: #00008B;
   }
    .col-3 {
     width: 33.3%;
